# ASTRA

./: .gitignore  astra_mcp_server.py  build_database.py  check_feasible.py  config.py  constraint_utils.py  lut_utils.py  lut_utils_v2.py  pyproject.toml  smoke_test.py
Find_Initial_Design/: bo_logic.py
FocalOpt/: __init__.py  focal_opt_main.py  mi_analysis.py  optimization_core.py  ota_config.py  utility_functions.py
examples/: ngspice_runner.py  simulation_OTA_two.py  temp_ICCAD_OTA_two_new2.cir
examples/netlists/: ICCAD_OTA_two_new.cir  ICCAD_OTA_two_new.cir.bak
gmid_LUT/: lut_nmos.csv  lut_pmos.csv  nmos_gmid10.csv  nmos_gmid12.csv  nmos_gmid14.csv  nmos_gmid15.csv  nmos_gmid17.csv  nmos_gmid18.csv  nmos_gmid20.csv  nmos_gmid22.csv  nmos_gmid25.csv  nmos_gmid5.csv  nmos_gmid7.csv  nmos_gmid8.csv  pmos_gmid10.csv  pmos_gmid12.csv  pmos_gmid14.csv  pmos_gmid15.csv  pmos_gmid17.csv  pmos_gmid18.csv  pmos_gmid20.csv  pmos_gmid22.csv  pmos_gmid25.csv  pmos_gmid5.csv  pmos_gmid7.csv  pmos_gmid8.csv
