[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "botorch==0.8.2",
    "chromadb>=1.2.1",
    "mcp==1.7.1",
    "openai>=1.77.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.0",
    "sentence-transformers==2.2.2",
    "huggingface-hub==0.25.2",
    "onnxruntime==1.20.1",
    "numpy==1.26.4",
    "gpytorch==1.9.1",
    "torch==2.2.2",
    "torchvision==0.17.2"
]

[tool.setuptools.packages.find]
include = ["FocalOpt*", "Find_Initial_Design*", "examples*"]
